<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/on_back"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_on_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_title_create_account"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title_create_account_email"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="112dp"
        android:layout_marginStart="44dp"
        android:text="@string/text_title_create_account_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_email_or_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="34dp"
        android:background="@drawable/background_create_account"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_create_account_email"
        tools:ignore="RtlSymmetry"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="34dp"
        android:visibility="gone"
        android:background="@drawable/background_create_account"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_create_account_email"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:text="@string/min_character_create_password"
        android:textSize="8sp"
        android:textColor="@color/text_error_password_create_account"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintStart_toStartOf="@+id/text_input_password"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_next"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="35dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/background_button_login_register"
        android:background="@drawable/background_edit_text"
        android:gravity="center"
        android:text="@string/general_next"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email_or_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>