<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:paddingRight="12dp"
    android:paddingLeft="12dp"
    android:paddingTop="24dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_modal"
        android:fillViewport="true"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView_close"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/image_default"
                android:src="@drawable/ic_close"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_error_generic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lab_msg_error_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/coolvetica"
                android:text="@string/title_dialog_error_login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lab_msg_error_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins"
                android:text="@string/sub_title_dialog_error_login"
                android:textAlignment="center"
                android:lineSpacingExtra="1dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lab_msg_error_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButton_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="24dp"
                android:imeOptions="actionDone"
                android:background="@drawable/background_edit_text"
                android:backgroundTint="@color/background_button_login_register"
                android:fontFamily="@font/coolvetica"
                android:text="@string/general_accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lab_msg_error_subtitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>