<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_login_register"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginTop="110dp"
            android:src="@drawable/image_splash"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_welcome_login"
            android:textSize="44sp"
            android:textColor="@color/white"
            android:fontFamily="@font/coolvetica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_login_register"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sub_title_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_sub_title_login"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_login_register"/>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="35dp"
            android:text="@string/hint_text_login_register"
            android:textSize="12sp"
            android:textColor="@color/text_hind"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:background="@drawable/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_title_login_register"/>

        <TextView
            android:id="@+id/text_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/view_divider_center_login"
            android:fontFamily="@font/poppins"
            android:textSize="10sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp" />

        <View
            android:id="@+id/view_one"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/text_divider"
            app:layout_constraintBottom_toBottomOf="@+id/text_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_divider"/>

        <View
            android:id="@+id/view_two"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/text_divider"
            app:layout_constraintBottom_toBottomOf="@+id/text_divider"
            app:layout_constraintStart_toEndOf="@+id/text_divider"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="35dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/background_button_login_register"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/text_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_login_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="35dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:text="@string/login_from_google"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/image_google"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_from_google"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="35dp"
            app:layout_constraintTop_toBottomOf="@+id/button_login_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/image_facebook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_from_facebook"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>